# Teeny-Santa-Fight-System

./: .gitignore
Sound/: CMakeLists.txt
Sound/Simple-Sound/: CMakeLists.txt
Sound/Simple-Sound/snd/: merry.h
Sound/Simple-Sound/src/: main.cpp  vga_config.h
VGA_Graphics/VGA_BMP/: bmp_drawer.c  santa.vga
VGA_Graphics/VGA_BMP/scripts/: BMP.cpp  Makefile  output.vga  santa2.vga
VGA_Graphics/VGA_Graphics_Primitives/: vga_graphics_demo.c
